--- a/angular/src/app/components/student-form/student-form.component.html
+++ b/angular/src/app/components/student-form/student-form.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <button id="save-button" type="submit" class="btn btn-primary">Save changes</button>
+        <button [disabled]="!form.valid" id="save-button" type="submit" class="btn btn-primary">Save changes</button>
 
     </form>
 
